// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiteratureSubmissionPage displays form after skipping import 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    span={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest content
      </h3>
      This form allows you to suggest a preprint, an article, a book, a conference proceeding or a thesis you would like to see added to INSPIRE. We will check your suggestion with our
       
      <ExternalLink
        href="//inspirehep.net/info/hep/collection-policy"
      >
        selection policy
      </ExternalLink>
       
      and transfer it to INSPIRE.
    </Row>
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <Col>
        <Connect(DataImporterContainer)
          onSkipClick={[Function]}
        />
      </Col>
    </Row>
    <Row
      className="mb3 ph3 pt3 bg-white"
      gutter={0}
    >
      <Col>
        <FormItem
          colon={true}
          hasFeedback={false}
          label="Select type of the document"
          labelCol={
            Object {
              "span": 5,
            }
          }
          prefixCls="ant-form"
          wrapperCol={
            Object {
              "span": 19,
            }
          }
        >
          <SelectBox
            className="w-100"
            data-test-id="document-type-select"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "display": "Article/Conference paper",
                  "value": "article",
                },
                Object {
                  "display": "Thesis",
                  "value": "thesis",
                },
                Object {
                  "display": "Book",
                  "value": "book",
                },
                Object {
                  "display": "Book Chapter",
                  "value": "bookChapter",
                },
              ]
            }
            value="article"
          />
        </FormItem>
      </Col>
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          docType="article"
          error={null}
          initialFormData={null}
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;

exports[`LiteratureSubmissionPage renders different docType form when docType is changed 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    span={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest content
      </h3>
      This form allows you to suggest a preprint, an article, a book, a conference proceeding or a thesis you would like to see added to INSPIRE. We will check your suggestion with our
       
      <ExternalLink
        href="//inspirehep.net/info/hep/collection-policy"
      >
        selection policy
      </ExternalLink>
       
      and transfer it to INSPIRE.
    </Row>
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <Col>
        <Connect(DataImporterContainer)
          onSkipClick={[Function]}
        />
      </Col>
    </Row>
    <Row
      className="mb3 ph3 pt3 bg-white"
      gutter={0}
    >
      <Col>
        <FormItem
          colon={true}
          hasFeedback={false}
          label="Select type of the document"
          labelCol={
            Object {
              "span": 5,
            }
          }
          prefixCls="ant-form"
          wrapperCol={
            Object {
              "span": 19,
            }
          }
        >
          <SelectBox
            className="w-100"
            data-test-id="document-type-select"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "display": "Article/Conference paper",
                  "value": "article",
                },
                Object {
                  "display": "Thesis",
                  "value": "thesis",
                },
                Object {
                  "display": "Book",
                  "value": "book",
                },
                Object {
                  "display": "Book Chapter",
                  "value": "bookChapter",
                },
              ]
            }
            value="book"
          />
        </FormItem>
      </Col>
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          docType="book"
          error={null}
          initialFormData={null}
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;

exports[`LiteratureSubmissionPage renders form after skipping import 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    span={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest content
      </h3>
      This form allows you to suggest a preprint, an article, a book, a conference proceeding or a thesis you would like to see added to INSPIRE. We will check your suggestion with our
       
      <ExternalLink
        href="//inspirehep.net/info/hep/collection-policy"
      >
        selection policy
      </ExternalLink>
       
      and transfer it to INSPIRE.
    </Row>
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <Col>
        <Connect(DataImporterContainer)
          onSkipClick={[Function]}
        />
      </Col>
    </Row>
    <Row
      className="mb3 ph3 pt3 bg-white"
      gutter={0}
    >
      <Col>
        <FormItem
          colon={true}
          hasFeedback={false}
          label="Select type of the document"
          labelCol={
            Object {
              "span": 5,
            }
          }
          prefixCls="ant-form"
          wrapperCol={
            Object {
              "span": 19,
            }
          }
        >
          <SelectBox
            className="w-100"
            data-test-id="document-type-select"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "display": "Article/Conference paper",
                  "value": "article",
                },
                Object {
                  "display": "Thesis",
                  "value": "thesis",
                },
                Object {
                  "display": "Book",
                  "value": "book",
                },
                Object {
                  "display": "Book Chapter",
                  "value": "bookChapter",
                },
              ]
            }
            value="article"
          />
        </FormItem>
      </Col>
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          docType="article"
          error={null}
          initialFormData={null}
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;

exports[`LiteratureSubmissionPage renders with initial data and error 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    span={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest content
      </h3>
      This form allows you to suggest a preprint, an article, a book, a conference proceeding or a thesis you would like to see added to INSPIRE. We will check your suggestion with our
       
      <ExternalLink
        href="//inspirehep.net/info/hep/collection-policy"
      >
        selection policy
      </ExternalLink>
       
      and transfer it to INSPIRE.
    </Row>
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <Col>
        <Connect(DataImporterContainer)
          onSkipClick={[Function]}
        />
      </Col>
    </Row>
    <Row
      className="mb3 ph3 pt3 bg-white"
      gutter={0}
    >
      <Col>
        <FormItem
          colon={true}
          hasFeedback={false}
          label="Select type of the document"
          labelCol={
            Object {
              "span": 5,
            }
          }
          prefixCls="ant-form"
          wrapperCol={
            Object {
              "span": 19,
            }
          }
        >
          <SelectBox
            className="w-100"
            data-test-id="document-type-select"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "display": "Article/Conference paper",
                  "value": "article",
                },
                Object {
                  "display": "Thesis",
                  "value": "thesis",
                },
                Object {
                  "display": "Book",
                  "value": "book",
                },
                Object {
                  "display": "Book Chapter",
                  "value": "bookChapter",
                },
              ]
            }
            value="article"
          />
        </FormItem>
      </Col>
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          docType="article"
          error={
            Immutable.Map {
              "message": "Submit Error",
            }
          }
          initialFormData={
            Immutable.Map {
              "title": "Imported arXiv article",
            }
          }
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;

exports[`LiteratureSubmissionPage renders with initial store state 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    span={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest content
      </h3>
      This form allows you to suggest a preprint, an article, a book, a conference proceeding or a thesis you would like to see added to INSPIRE. We will check your suggestion with our
       
      <ExternalLink
        href="//inspirehep.net/info/hep/collection-policy"
      >
        selection policy
      </ExternalLink>
       
      and transfer it to INSPIRE.
    </Row>
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <Col>
        <Connect(DataImporterContainer)
          onSkipClick={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;
